# python-x-chronotrak

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  RELEASE_NOTES.yaml  config.py  docker-compose.yml  encrypt_clients.py  gunicorn.conf.py  pyproject.toml  requirements.txt  run.py  start.sh
.cursor/rules/: alembic-migrations.mdc  dev-environment.mdc  docker.mdc  flask-patterns.mdc  frontend-separation.mdc  git-conventions.mdc  python-standards.mdc
.gitea/workflows/: cicd.yml
app/: __init__.py
app/forms/: admin.py  auth.py  client.py  project.py  task.py
app/models/: client.py  communication.py  notification.py  project.py  task.py  token.py  user.py
app/routes/: admin.py  api.py  auth.py  clients.py  communications.py  main.py  optimization.py  projects.py  tasks.py
app/static/css/: base.css  components.css  critical-theme.css  dark-mode.css  filters.css  prismatic-nav.css  style.css  tasks.css
app/static/css/admin/: tasks.css
app/static/css/components/: card_collapse.css  cards.css  credit-info.css  filters.css  forms.css  kanban.css  navbar.css  status.css
app/static/css/pages/: clients.css  communications.css  dashboard.css  project_detail.css  projects.css  tasks.css  welcome-page.css
app/static/favicon/: site.webmanifest
app/static/js/: csrf-init.js  main.js  prismatic-nav.js  theme-loader.js  utils.js
app/static/js/admin/: tasks.js
app/static/js/components/: kanban-dragdrop.js  kanban.js
app/static/js/lib/: dark-mode.js  turnstile.js
app/static/js/pages/: auth.js  card_collapse.js  dashboard.js  notification_preferences.js  project-description.js  project_favorites.js  project_filters.js  projects.js  (+18 more)
app/templates/: dashboard.html  index.html  layout.html  reports.html
app/templates/admin/: communication_detail.html  communications.html  dashboard.html  optimization_status.html  tasks.html  test_email.html  time_transfer.html
app/templates/auth/: edit_user.html  login.html  profile.html  register.html  request_reset.html  reset_password.html  reset_request_sent.html  reset_success.html  users.html
app/templates/clients/: client_detail.html  client_form.html  clients.html
app/templates/components/: kanban_board.html
app/templates/emails/: password_reset.html  project_low_credit.html  task_comment_added.html  task_notification.html  task_status_changed.html  task_time_logged.html
app/templates/errors/: error.html
app/templates/info/: version.html
app/templates/projects/: add_credit.html  project_detail.html  project_form.html  project_history.html  projects.html
app/templates/tasks/: archives.html  my_tasks.html  reports.html  task_card.html  task_detail.html  task_form.html
app/utils/: __init__.py  csp.py  db_optimization.py  decorators.py  email.py  encryption.py  error_handler.py  login_rate_limit.py  page_timer.py  python313_optimizations.py  release_notes.py  route_utils.py  slug_utils.py  task_attachments.py  time_format.py  version.py
docs/: ARCHIVAGE_TACHES.md  PRE_COMMIT.md  email_rules.md  guide_crypt.md
management/: README.md  auto_archive_tasks.py  setup_cron.sh
migrations/versions/: 0857f07e6305_add_credit_alert_sent_flag.py  1e508d20a8d9_add_notification_preferences.py  2d7c163ec536_add_checklist_items_table.py  2f662311be73_add_communications_tracking.py  30692c640fae_initial_migration.py  35d68cffdfe2_add_task_created_notification_preference.py  427a382ef06b_add_password_reset_tokens.py  4719aa97706b_add_user_last_login.py  56597963674a_ajout_du_chiffrement_pour_les_.py  59221afbf126_merge_heads.py  6a79ac14d01b_add_slugs_to_models.py  7295cd8f96aa_add_comments_table.py  a51ddf5b4c65_convert_time_tracking_to_minutes.py  add_pinned_tasks.py  add_position_to_task_model.py  add_user_pinned_task.py  bad0b05a6b6f_add_archive_fields_to_task_model.py  c81b6c3e4d10_add_task_recurrence_series.py  ce5f817a275a_add_parent_id_to_comments_for_replies.py  cef9865047a2_ajout_du_rôle_client_et_relation_user_.py  d1a7cda8cd78_add_time_tracking_enabled_to_project_.py  d8554cc957ca_add_is_favorite_field_to_project_model.py  ff10620f289d_ajout_du_chiffrement_pour_les_données_.py  set_time_tracking_enabled_default.py
scripts/: auto_archive_tasks.py  check_communications.py  create_admin.py  encrypt_clients.py  encrypt_comments.py  fix_credits.py  fix_task_time.py  fix_unencrypted_data.py  fix_unencrypted_data_prod.py  generate_demo_db.py  initialize_notification_prefs.py  test_email_rules.py  update_version.sh
tests/: README.md  __init__.py  conftest.py  test_config.py  test_csp.py  test_health.py  test_login_csrf.py  test_login_rate_limit.py  test_models_client.py  test_models_project.py  test_models_user.py  test_routes_time_entry.py  test_task_clone_csrf.py  test_task_status_update_csrf.py  test_utils_init.py  test_utils_slug.py  test_utils_time_format.py
(+2 files in other folders)
