[project]
name = "chronotrak"
version = "2.4.15"
description = "ChronoTrak - Time tracking application"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "bcrypt==5.0.0",
    "blinker==1.9.0",
    "cachelib==0.13.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "cryptography==46.0.3",
    "dnspython==2.8.0",
    "email_validator==2.3.0",
    "Flask>=3.1.2",
    "Flask-Admin>=2.0.0",
    "Flask-Bcrypt>=1.0.1",
    "Flask-Caching>=2.3.1",
    "Flask-Login>=0.6.3",
    "Flask-Mail>=0.10.0",
    "Flask-Migrate>=4.1.0",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-WTF>=1.2.2",
    "greenlet==3.2.4",
    "idna==3.11",
    "iniconfig==2.3.0",
    "itsdangerous==2.2.0",
    "Jinja2>=3.1.6",
    "Mako==1.3.10",
    "MarkupSafe==3.0.3",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pycparser==2.23",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "pytz==2025.2",
    "requests>=2.32.5",
    "SQLAlchemy>=2.0.44",
    "typing_extensions==4.15.0",
    "Unidecode==1.4.0",
    "urllib3>=2.6.0",
    "Werkzeug>=3.1.3",
    "WTForms>=3.2.1",
    "waitress>=3.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "bandit>=1.8.0",      # Audit de sécurité du code
    "pip-audit>=2.9.0",   # Vérification des vulnérabilités des dépendances
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]