[project]
name = "chronotrak"
version = "2.4.15"
description = "ChronoTrak - Time tracking application"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "bcrypt>=5.0.0,<6",
    "blinker>=1.9.0,<2",
    "cachelib>=0.13.0,<1",
    "certifi>=2025.10.5",
    "cffi>=2.0.0,<3",
    "charset-normalizer>=3.4.4,<4",
    "click>=8.3.0,<9",
    "cryptography>=46.0.3,<47",
    "dnspython>=2.8.0,<3",
    "email_validator>=2.3.0,<3",
    "Flask>=3.1.2",
    "Flask-Admin>=2.0.0",
    "Flask-Bcrypt>=1.0.1",
    "Flask-Caching>=2.3.1",
    "Flask-Login>=0.6.3",
    "Flask-Mail>=0.10.0",
    "Flask-Migrate>=4.1.0",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-WTF>=1.2.2",
    "greenlet>=3.2.4,<4",
    "idna>=3.11,<4",
    "iniconfig>=2.3.0,<3",
    "itsdangerous>=2.2.0,<3",
    "Jinja2>=3.1.6",
    "Mako>=1.3.10,<2",
    "MarkupSafe>=3.0.3,<4",
    "packaging>=25.0,<26",
    "pluggy>=1.6.0,<2",
    "pycparser>=2.23,<3",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "SQLAlchemy>=2.0.44",
    "typing_extensions>=4.15.0,<5",
    "Unidecode>=1.4.0,<2",
    "urllib3>=2.6.0",
    "Werkzeug>=3.1.3",
    "WTForms>=3.2.1",
    "waitress>=3.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov>=5.0.0",  # Couverture de code pour les tests
    "bandit>=1.8.0",      # Audit de sécurité du code
    "pip-audit>=2.9.0",   # Vérification des vulnérabilités des dépendances
    "pre-commit>=4.0.0", # Hooks Git (lint/format au commit)
    "ruff>=0.8.0",       # Linter et formateur Python
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Tests unitaires",
    "integration: Tests d'intégration",
    "slow: Tests lents",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.bandit]
# Configuration Bandit pour l'audit de sécurité
exclude_dirs = ["tests", "migrations", ".venv", "venv", "__pycache__"]
skips = ["B101", "B601"]  # Ignorer assert_used et shell_injection_subprocess (faux positifs Flask)

[tool.ruff]
# Linting : cible Python 3.13, répertoires à analyser
target-version = "py313"
line-length = 120
src = ["app", "config.py", "run.py", "wsgi.py", "management", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (imports)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (géré par formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "E712",   # SQLAlchemy filters use == True/False (column expressions)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert allowed in tests
"migrations/*" = ["E501"]  # migrations may have long lines

[tool.ruff.format]
# Formatage : cohérent avec le lint
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
